Rename page menue la-note-enchan(é)e, center inpunt search-bar

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -42,6 +42,7 @@ h1 {
         background-color: transparent;
         border: 0px solid;
         font-size: 16px;
+        width: 120px;
         padding: 13px 0px 13px 0px;
     }
 }
@@ -325,6 +326,7 @@ footer {
     h1 {
         font-size: 40px;
         margin: 20px 0px 20px 0px;
+        padding: 0;
     }
 
     .header-form {
