--- a/css/index-final.css
+++ b/css/index-final.css
@@ -33,6 +33,7 @@ h1 {
   background-color: transparent;
   border: 0px solid;
   font-size: 16px;
+  width: 120px;
   padding: 13px 0px 13px 0px;
 }
 
@@ -287,6 +288,7 @@ footer a {
   h1 {
     font-size: 35px;
     margin: 10px 0px 10px 0px;
+    padding: 0;
   }
 
   .header-form {
