fa-heart cards position right 18px Logo nouveau color changed to green(s008766)

--- a/css/index.css
+++ b/css/index.css
@@ -166,7 +166,7 @@ h1 {
   color: black;
   font-weight: lighter;
   font-size: x-large;
-  right: 48px;
+  right: 18px;
   bottom: 30px;
 }
 .article-cards .card-txt .fa-heart:hover {
@@ -177,6 +177,7 @@ h1 {
 .logo-nouveau {
   position: absolute;
   background: #99E2D0;
+  color: #008766;
   top: 15px;
   right: 15px;
   padding: 10px;
