--- a/css/menu-restaurants.css
+++ b/css/menu-restaurants.css
@@ -73,6 +73,11 @@
   main .fa-heart {
     font-size: x-large;
   }
+
+  main .fa-heart:hover {
+    font-weight: bolder;
+    color: #9356DC;
+  }
   
   /****** Menu-section ***********/
   .section-entrees, .section-plats, .section-desserts {
