--- a/css/menu-restaurants.css
+++ b/css/menu-restaurants.css
@@ -117,7 +117,7 @@
     overflow: hidden;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
   }
-  .background-cards:hover .transition {
+  .background-cards:hover .checkmark {
     padding-left: 22px;
     padding-right: 45px;
   }
@@ -134,7 +134,7 @@
     font-weight: 700;
   }
   
-  .transition {
+  .checkmark {
     background-color: #99E2D0;
     margin-top: -30px;
     margin-bottom: -24px;
