--- a/scss/menu-restaurants.scss
+++ b/scss/menu-restaurants.scss
@@ -134,7 +134,7 @@ main {
     box-shadow: 0px 4px 15px 0px rgba(0,0, 0, 0.1);
 
 
-    &:hover .transition {
+    &:hover .checkmark {
         padding-left: 22px;
         padding-right: 40px;
     }
@@ -155,7 +155,7 @@ main {
     }
 }
 
-.transition {
+.checkmark {
     background-color: $tertiary-color;
     margin-top: -30px;
     margin-bottom: -24px;
