--- a/scss/menu-restaurants.scss
+++ b/scss/menu-restaurants.scss
@@ -90,10 +90,27 @@ main {
     }
 }
 /****** Menu-section ***********/
-.menu-h2-and-heart {
-    display: flex;
-    align-items: baseline;
-    justify-content: center;
+
+.section-entrees {
+    animation: fadein 3.5s;
+}
+  
+.section-plats {
+    animation: fadein 7s;
+}
+
+.section-desserts {
+    animation: fadein 10.5s;
+}
+  
+@keyframes fadein {
+    from {
+    opacity: 0;
+    }
+
+    to {
+    opacity: 1;
+    }
 }
 
 .section-entrees, .section-plats, .section-desserts {
@@ -133,7 +150,16 @@ main {
     overflow: hidden;
     box-shadow: 0px 4px 15px 0px rgba(0,0, 0, 0.1);
 
-
+    .checkmark {
+        background-color: $tertiary-color;
+        margin-top: -30px;
+        margin-bottom: -24px;
+        padding-top: 35px;
+        padding-bottom: 35px;
+        width: 0;
+        transition: all 1s;
+    }
+    
     &:hover .checkmark {
         padding-left: 22px;
         padding-right: 40px;
@@ -155,15 +181,7 @@ main {
     }
 }
 
-.checkmark {
-    background-color: $tertiary-color;
-    margin-top: -30px;
-    margin-bottom: -24px;
-    padding-top: 35px;
-    padding-bottom: 35px;
-    width: 0;
-    transition: all 1s;
-}
+
 
 .cards-subtitle {
     font-size: 15px;
@@ -329,7 +347,6 @@ footer {
         padding-right: 200px;
     }
 
-    /****** Menu section ***********/
     .menu-h2-and-heart {
         display: flex;
         align-items: baseline;
