--- a/scss/menu-restaurants.scss
+++ b/scss/menu-restaurants.scss
@@ -81,6 +81,7 @@ main {
         margin-right: 40px;
     }
     .fa-heart {
+        transition: all 0.3s linear 0s;
         font-size: x-large;
     }
 
