--- a/scss/common.scss
+++ b/scss/common.scss
@@ -7,3 +7,63 @@
 $primary-color:#9356DC;
 $secondary-color:#FF79DA;
 $tertiary-color:#99E2D0;
+$desktop-screen: 1024px;
+$tablette-screen-min: 768px;
+$tablette-screen-max: 1023px;
+
+body { 
+    position: relative;
+    margin:0;
+}
+
+a {
+    text-decoration: none;
+}
+/***** Header ***********/
+h1 {
+    font-family: 'Shrikhand', sans-serif;
+}
+
+/****** Footer ***********/
+footer {
+    background-color: var(--Grey, #353535);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 17px;
+
+    h2 {
+        font-family: 'Shrikhand';
+        font-weight: normal;
+        font-size: 18px;
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+
+        ul {
+            margin-bottom: 10px;
+
+            li {
+                list-style: none;
+                margin-left: -41px;
+                margin-bottom: 10px;
+                
+                a {
+                    color: white;
+                }
+            }                
+        }
+}    
+     
+.footer-icons {
+    display: flex;
+    gap: 10px;
+}
+
+.fa-handshake-angle {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    margin-right: -2px;
+}
