--- a/scss/index.scss
+++ b/scss/index.scss
@@ -219,6 +219,7 @@ footer {
     color: white;
     display: flex;
     flex-direction: column;
+    gap: 10px;
     padding-left: 17px;
 
     h2 {
@@ -226,18 +227,22 @@ footer {
         font-weight: normal;
         font-size: 18px;
         margin-top: 25px;
-        margin-bottom: 5px;
-    }
-
-    li {
-        list-style: none;
-        margin-left: -41px;
         margin-bottom: 10px;
     }
 
-    a {
-        color: white;
-    }
+        ul {
+            margin-bottom: 10px;
+
+            li {
+                list-style: none;
+                margin-left: -41px;
+                margin-bottom: 10px;
+                
+                a {
+                    color: white;
+                }
+            }                
+        }
 }
 
 .footer-icons {
@@ -249,7 +254,7 @@ footer {
 .fa-handshake-angle {
     display: flex;
     align-items: center;
-    font-size: 13px;
+    font-size: 12px;
     margin-right: -2px;
 }
 
