Refactoring: common.scss index.scss menu-restaurants.scss

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -331,9 +331,9 @@ footer {
 
     /****** Header (desktop) ***********/
     h1 {
-        font-size: 40px;
-        margin: 20px 0px 20px 0px;
-        padding: 0;
+        font-size: 35px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     .header-form {
