--- a/scss/common.scss
+++ b/scss/common.scss
@@ -24,6 +24,64 @@ h1 {
     font-family: 'Shrikhand', sans-serif;
 }
 
+.header-form {
+
+    display:flex;
+    background-color: #eaeaea;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.25)inset;
+
+    .search-input {
+        background-color: transparent;
+        border: 0px solid;
+        font-size: 16px;
+        width: 120px;
+        padding: 13px 0px 13px 0px;
+    }
+}
+
+/****** Présentation-section ***********/
+
+.section-presentation {
+    background:rgb(246,246,246);
+    padding: 25px 20px 60px 20px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)inset;
+
+    .h2-presentation {
+        text-align: center;
+    }
+
+    .content-presentation {
+    font-weight: lighter;
+    font-size: large;
+    text-align: center;
+    }
+
+    nav {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    
+        .presentation-button {
+                background: linear-gradient(0deg,rgba(147,86,220,1) 0%,
+                                                rgba(244,109,206,1) 100%);
+                color: white;
+                font-size: 16px;
+                border: 1px;
+                border-radius: 25px ;
+                padding: 15px 20px 15px 20px; 
+                box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+        
+            &:hover {
+                    opacity: 0.8;
+                    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 1);
+            }
+        }   
+    }    
+} 
+
 /****** Footer ***********/
 footer {
     background-color: var(--Grey, #353535);
@@ -66,4 +124,49 @@ footer {
     align-items: center;
     font-size: 12px;
     margin-right: -2px;
+}
+
+/****** Media queries ***********/
+@media screen and (min-width: $tablette-screen-min) and (max-width: $tablette-screen-max) {
+
+}
+
+@media (min-width: $desktop-screen) {
+
+    /****** Header (desktop) ***********/
+    h1 {
+        font-size: 35px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    footer {
+        flex-direction: row-reverse;
+        align-items: last baseline;
+        gap: 70px;
+        padding: 40px 0px 0px 0px;
+
+        h2 {
+            margin: 0px 85px 0px 0px;
+        }
+    }
+
+    footer ul {
+        display: flex;
+        gap: 50px;
+        
+        .footer-icons {
+            margin-left: -115px;
+        }
+        
+        a {
+            margin-right: 25px;
+        }
+    }
+
+    .fa-handshake-angle {
+        display: flex;
+        align-items: center;
+        margin-left: 50px;
+    }
 }
