--- a/css/index.css
+++ b/css/index.css
@@ -307,6 +307,10 @@ footer a {
     box-shadow: none;
   }
 
+  .section-presentation .h2-presentation {
+    font-size: 40px;
+  }
+
   /****** Functioning (desktop) ***********/
   .functioning-section {
     padding-bottom: 20px;
