--- a/scss/index.scss
+++ b/scss/index.scss
@@ -87,7 +87,7 @@ h1 {
     }    
 }  
 
-/****** Fonctionnement ***********/
+/****** Functioning ***********/
 
 .functioning-section {
     padding-bottom: 55px;
