--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,7 @@ h1 {
   box-shadow: 0px 4px 10px 0px black;
 }
 
-/****** Fonctionnement ***********/
+/****** Functioning ***********/
 .functioning-section {
   padding-bottom: 55px;
 }
