--- a/css/menu-restaurants.css
+++ b/css/menu-restaurants.css
@@ -78,6 +78,7 @@
   main .fa-heart:hover {
     font-weight: bolder;
     color: #9356DC;
+    scale: 120%;
   }
   
   /****** Menu-section ***********/
