--- a/scss/index.scss
+++ b/scss/index.scss
@@ -198,6 +198,7 @@ h1 {
         .fa-heart:hover {
             font-weight: bolder;
             color: $primary-color;
+            scale: 120%;
         }
     }              
 }
