--- a/scss/menu-restaurants.scss
+++ b/scss/menu-restaurants.scss
@@ -88,6 +88,7 @@ main {
     .fa-heart:hover {
         font-weight: bolder;
         color: #9356DC;
+        scale: 120%;
     }
 }
 /****** Menu-section ***********/
