--- a/scss/index.scss
+++ b/scss/index.scss
@@ -150,6 +150,49 @@ h1 {
     h2 {
         margin: 55px 0px 18px 15px;
     }
+
+    .overlay-loading {
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        animation: overlay-hidd 3s forwards;
+
+        .fa-arrow-rotate-right {
+            font-size: 50px;
+            animation: rotate 1.5s linear infinite;
+        }
+          
+        @keyframes rotate {
+        0% { transform: rotate(0deg);}
+        100% { transform: rotate(360deg);}
+        }
+    }
+      
+    @keyframes overlay-hidd {
+        to {
+            visibility:hidden;
+        }
+    }      
+}
+
+.overlay-loading {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .article-cards {
