--- a/css/index.css
+++ b/css/index.css
@@ -129,7 +129,7 @@ h1 {
 
 .overlay-loading {
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
   top: 0;
@@ -150,7 +150,8 @@ h1 {
 }
 
 .fa-arrow-rotate-right {
-  font-size: 50px;
+  color: white;
+  font-size: 60px;
   animation: rotate 1.5s linear infinite;
 }
 
