--- a/scss/index.scss
+++ b/scss/index.scss
@@ -153,7 +153,7 @@ h1 {
 
     .overlay-loading {
         position: fixed;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(0, 0, 0, 0.6);
         width: 100%;
         height: 100%;
         top: 0;
@@ -167,7 +167,8 @@ h1 {
         animation: overlay-hidd 3s forwards;
 
         .fa-arrow-rotate-right {
-            font-size: 50px;
+            color: white;
+            font-size: 60px;
             animation: rotate 1.5s linear infinite;
         }
           
