--- a/css/index.css
+++ b/css/index.css
@@ -149,8 +149,11 @@ h1 {
   }
 }
 
-.fa-arrow-rotate-right {
+.fa-utensils {
+  border: 2px solid #9356DC;
+  border-radius: 50%;
   color: white;
+  background-color: black;
   font-size: 60px;
   animation: rotate 1.5s linear infinite;
 }
