--- a/scss/index.scss
+++ b/scss/index.scss
@@ -173,8 +173,8 @@ h1 {
         }
           
         @keyframes rotate {
-        0% { transform: rotate(0deg);}
-        100% { transform: rotate(360deg);}
+            0% { transform: rotate(0deg);}
+            100% { transform: rotate(360deg);}
         }
     }
       
@@ -211,11 +211,6 @@ h1 {
         border-radius: 15px 15px 0px 0px;
     }
 
-    .card-img {  /******* à verifier *******/
-    display: inline-block;
-    position: relative;
-    }
-
     .card-txt {
         position: relative;
         border-radius: 0px 0px 15px 15px;
@@ -230,20 +225,40 @@ h1 {
             margin: 2px 0px 15px 15px;
             font-weight: 300;
         }
-        .fa-heart {
-            transition: all 0.3s linear 0s;
+        .fa-heart-visible {
+            font-size: x-large;
             position: absolute;
             color: black;
-            font-weight: lighter;
+            right: 18px;
+            bottom: 30px ;
+        }
+
+        .fa-heart-masked {
+            position: absolute;
             font-size: x-large;
             right: 18px;
             bottom: 30px;
         }
-        .fa-heart:hover {
+        
+        .fa-heart-masked:hover {
+            position: absolute;
             font-weight: bolder;
             color: $primary-color;
-            scale: 120%;
+            animation: heart 2s forwards;
         }
+
+        @keyframes heart {
+            0% {
+                transform: scale(0.4);
+                opacity: 0.3;
+            }
+            
+            100% {
+                transform: scale(1.3);
+                opacity: 1;
+            }
+        }
+        
     }              
 }
 
