--- a/scss/menu-restaurants.scss
+++ b/scss/menu-restaurants.scss
@@ -78,6 +78,7 @@ header img {
         margin-right: 40px;
     }
 }
+
 /****** Menu-section ***********/
 
 .section-entrees {
@@ -128,6 +129,7 @@ header img {
         margin-top: 5px;
     }
 }
+
 .background-cards {
     position: relative;
     display: flex;
@@ -196,6 +198,7 @@ header img {
         box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 1);
     }
 }
+
 /****** Footer ***********/
 footer {
     background-color: var(--Grey, #353535);
@@ -240,7 +243,6 @@ footer {
     margin-right: -2px;
 }
 
-
 /****** Media queries ***********/
 
 @media screen and (min-width: $tablette-screen-min) and (max-width: $tablette-screen-max) {
@@ -256,7 +258,7 @@ footer {
     }
 
 /****** Main (tablette-version) ***********/
-    .main-section {
+    .main-menu {
         margin-right: 115px;
         margin-left: 115px;
         padding-bottom: 84px;
@@ -372,4 +374,3 @@ footer {
         margin-left: 50px;
     }
 }
-
