--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -22,6 +22,13 @@ a {
 /***** Header ***********/
 h1 {
     font-family: 'Shrikhand', sans-serif;
+    font-size: 28px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    margin:0;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .header-form {
@@ -145,6 +152,37 @@ footer {
         gap: 70px;
         padding: 40px 0px 0px 0px;
 
+        h2 {
+            margin: 0px 85px 0px 0px;
+        }
+    }
+
+    footer ul {
+        display: flex;
+        gap: 50px;
+        
+        .footer-icons {
+            margin-left: -115px;
+        }
+        
+        a {
+            margin-right: 25px;
+        }
+    }
+
+    .fa-handshake-angle {
+        display: flex;
+        align-items: center;
+        margin-left: 50px;
+    }
+
+    /****** Footer (desktop) ***********/
+    footer {
+        flex-direction: row-reverse;
+        align-items: last baseline;
+        gap: 70px;
+        padding: 40px 0px 0px 0px;
+    
         h2 {
             margin: 0px 85px 0px 0px;
         }
