--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,34 +1,4 @@
-/****** General ***********/
-* {
-    font-family: 'Roboto', sans-serif;
-}
-
-// variables
-$primary-color:#9356DC;
-$secondary-color:#FF79DA;
-$tiercary-color:#99E2D0;
-$desktop-screen: 1024px;
-$tablette-screen-min: 768px;
-$tablette-screen-max: 1023px;
-
-//mixins
-
-body {
-    margin:0;
-}
-
-a {
-    text-decoration: none;
-}
-
 /****** Header ***********/
-h1 {
-    font-family: 'Shrikhand', sans-serif;
-    display: flex;
-    justify-content: center;
-    margin: 15px 0px 7px 0px;
-}
-
 .header-form {
 
     display:flex;
@@ -257,8 +227,7 @@ h1 {
                 transform: scale(1.3);
                 opacity: 1;
             }
-        }
-        
+        }   
     }              
 }
 
@@ -272,83 +241,33 @@ h1 {
     border-radius: 2px
 }
 
-/****** Footer ***********/
-
-footer {
-    background-color: var(--Grey, #353535);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding-left: 17px;
-
-    h2 {
-        font-family: 'Shrikhand';
-        font-weight: normal;
-        font-size: 18px;
-        margin-top: 25px;
-        margin-bottom: 10px;
-    }
-
-        ul {
-            margin-bottom: 10px;
-
-            li {
-                list-style: none;
-                margin-left: -41px;
-                margin-bottom: 10px;
-                
-                a {
-                    color: white;
-                }
-            }                
-        }
-}
-
-.footer-icons {
-    display: flex;
-    gap: 10px;
-}
-
-
-.fa-handshake-angle {
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    margin-right: -2px;
-}
-
 /****** Media queries ***********/
 
 @media screen and (min-width: $tablette-screen-min) and (max-width: $tablette-screen-max) {
 
-    /****** Functioning tablette version ***********/
+    /****** Functioning (tablette version) ***********/
     .functioning-section {
         padding-bottom: 20px;
-    
-        h2 {
-        margin-left: 15px;
-        }
     }
 
     .ol-functioning {
         width: 50%;
 
         .list-functioning {
-        padding: 27px 0px 27px 0px;
-        
+            padding: 27px 0px 27px 0px;
+            
             .functioning-icons {
-            font-size: 18px;
-            margin: -15px 0px 0px 0px;
-            justify-content: center;
-            display: flex;
+                font-size: 18px;
+                margin: -15px 0px 0px 0px;
+                justify-content: center;
+                display: flex;
             }
 
             .functioning-text {
-            font-weight: bold;
-            display: flex;
-            padding: 0px 0px 0px 4px;
-            justify-content: center;
+                font-weight: bold;
+                display: flex;
+                padding: 0px 0px 0px 4px;
+                justify-content: center;
             }
         }     
     }
@@ -359,7 +278,7 @@ footer {
             padding-bottom: 15px;
         
         h2 {
-            margin: 0px 0px 0px 15px;
+            margin: 0px 0px 20px 15px;
         }
     }
 
@@ -386,7 +305,7 @@ footer {
         justify-content: center;
     } 
 }
-/* Medium devices (tablets, less/equal than 1024px) */
+
 @media (min-width: $desktop-screen) {
 
     /****** Header (desktop) ***********/
@@ -417,6 +336,7 @@ footer {
     .functioning-section {
         padding-bottom: 20px;
     }
+
     .article-functioning {
         display: grid;
         justify-content: center;
@@ -433,7 +353,6 @@ footer {
 
             .list-functioning {
                 padding: 27px 59px 27px 27px;
-            
     
                 &::before {
                     margin-inline: -37px;
@@ -441,11 +360,6 @@ footer {
                 }
             }
         }
-    }
-
-    .li1 {                  /****** à verifier ***********/
-        padding-right: 80px;
-        margin:0;
     }
 
     /****** Restaurants Cards (desktop)***********/
@@ -457,7 +371,7 @@ footer {
         padding-bottom: 15px;
 
         h2 {
-            margin: 0px 0px 0px 15px;
+            margin: 0px 0px 22px 15px;
         }
 
         .restaurant-cards {
@@ -466,36 +380,5 @@ footer {
             width: 1045px;
             gap: 70px;
         }
-    }
-
-    /****** Footer (desktop) ***********/
-    footer {
-        flex-direction: row-reverse;
-        align-items: last baseline;
-        gap: 70px;
-        padding: 40px 0px 0px 0px;
-        
-        h2 {
-            margin: 0px 85px 0px 0px;
-        }
-    }
-
-    footer ul {
-        display: flex;
-        gap: 50px;
-        
-        .footer-icons {
-            margin-left: -115px;
-        }
-        
-        a {
-            margin-right: 25px;
-        }
-    }
-
-    .fa-handshake-angle {
-        display: flex;
-        align-items: center;
-        margin-left: 50px;
     }
 }
