--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -1,39 +1,6 @@
-/****** General ***********/
-* {
-    font-family: 'Roboto', sans-serif;
-}
-
-// variables
-$primary-color:#9356DC;
-$secondary-color:#FF79DA;
-$tertiary-color:#99E2D0;
-$desktop-screen: 1024px;
-$tablette-screen-min: 768px;
-$tablette-screen-max: 1023px;
-
-body { 
-    position: relative;
-    margin:0;
-}
-
-a {
-    text-decoration: none;
-}
-
 /****** Header ***********/
-h1 {
-    font-family: 'Shrikhand', sans-serif;
-    font-size: 28px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    margin:0;
-    padding-top: 12px;
-    padding-bottom: 12px;
-}
-
 header {
-    margin: 0;
+    margin: 0; /***** à verifier *****/
 }
 
 .fa-arrow-left {
@@ -199,50 +166,6 @@ header img {
     }
 }
 
-/****** Footer ***********/
-footer {
-    background-color: var(--Grey, #353535);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding-left: 17px;
-
-    h2 {
-        font-family: 'Shrikhand';
-        font-weight: normal;
-        font-size: 18px;
-        margin-top: 25px;
-        margin-bottom: 10px;
-    }
-
-        ul {
-            margin-bottom: 10px;
-
-            li {
-                list-style: none;
-                margin-left: -41px;
-                margin-bottom: 10px;
-                
-                a {
-                    color: white;
-                }
-            }                
-        }
-}    
-     
-.footer-icons {
-    display: flex;
-    gap: 10px;
-}
-
-.fa-handshake-angle {
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    margin-right: -2px;
-}
-
 /****** Media queries ***********/
 
 @media screen and (min-width: $tablette-screen-min) and (max-width: $tablette-screen-max) {
@@ -304,9 +227,7 @@ footer {
         } 
     }
 }
-/****** Media queries ***********/
 
-/* Medium devices (tablets, less/equal than 1024px) */
 @media (min-width: $desktop-screen) {
 
     /****** Header ***********/
@@ -326,7 +247,7 @@ footer {
     }
 
     .fa-arrow-left {
-        top: 34px;
+        top: 37px;
     }
     /****** Main (desktop) ***********/
     .main-menu {
@@ -341,36 +262,5 @@ footer {
         align-items: baseline;
         justify-content: center;
         margin-top: 35px;
-    }
-
-    /****** Footer (desktop) ***********/
-    footer {
-        flex-direction: row-reverse;
-        align-items: last baseline;
-        gap: 70px;
-        padding: 40px 0px 0px 0px;
-    
-        h2 {
-            margin: 0px 85px 0px 0px;
-        }
-    }
-
-    footer ul {
-        display: flex;
-        gap: 50px;
-        
-        .footer-icons {
-            margin-left: -115px;
-        }
-        
-        a {
-            margin-right: 25px;
-        }
-    }
-
-    .fa-handshake-angle {
-        display: flex;
-        align-items: center;
-        margin-left: 50px;
     }
 }
