index.scss menu-restaurants.scss main.scss

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -233,7 +233,7 @@
 
 .logo-nouveau {
     position:absolute;
-    background: $tiercary-color;
+    background: $tertiary-color;
     color: #008766;
     top:15px;
     right: 15px;
