--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -22,7 +22,7 @@ header img {
 }
 
 /****** Main-section **********/
-.main-section {
+.main-menu {
     position: inherit;
     background-color: #f6f6f6;
     display: flex;
