--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -46,6 +46,40 @@ header img {
     }
 }
 
+.fa-heart-visible {
+    color: black;
+    font-size: x-large;
+}
+
+.fa-heart-menu {
+    position: relative;
+}
+
+.fa-heart-masked {
+    position: absolute;
+    font-size: x-large;
+    right: 0px;
+}
+
+.fa-heart-masked:hover {
+    position: absolute;
+    font-weight: bolder;
+    color: $primary-color;
+    animation: heart 2s forwards;
+}
+
+@keyframes heart {
+    0% {
+        transform: scale(0.4);
+        opacity: 0.3;
+    }
+    
+    100% {
+        transform: scale(1.3);
+        opacity: 1;
+    }
+}
+
 /****** Menu-section ***********/
 
 .section-entrees {
