--- a/css/style.css
+++ b/css/style.css
@@ -545,9 +545,41 @@ header img {
   font-family: "Shrikhand";
   text-align: center;
   font-size: 28px;
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
+.fa-heart-visible {
+  color: black;
+  font-size: x-large;
+}
+
+.fa-heart-menu {
+  position: relative;
+}
+
+.fa-heart-masked {
+  position: absolute;
+  font-size: x-large;
+  right: 0px;
+}
+
+.fa-heart-masked:hover {
+  position: absolute;
+  font-weight: bolder;
+  color: #9356DC;
+  animation: heart 2s forwards;
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(0.4);
+    opacity: 0.3;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 1;
+  }
+}
 /****** Menu-section ***********/
 .section-entrees {
   animation: fadein 3.5s;
