--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -134,7 +134,7 @@
         justify-content: center;
         align-items: center;
         z-index: 1;
-        animation: overlay-hidd 3s forwards;
+        animation: overlay-hidd 2s forwards;
 
         .fa-arrow-rotate-right {
             color: white;
@@ -206,6 +206,7 @@
         .fa-heart-masked {
             position: absolute;
             font-size: x-large;
+            color: black;
             right: 18px;
             bottom: 30px;
         }
