--- a/css/style.css
+++ b/css/style.css
@@ -607,24 +607,26 @@ header img {
   gap: 12px;
   flex-direction: column;
 }
-.section-entrees h3, .section-plats h3, .section-desserts h3 {
+.section-entrees > h3, .section-plats > h3, .section-desserts > h3 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: lighter;
+}
+.section-entrees > h3::after, .section-plats > h3::after, .section-desserts > h3::after {
+  content: ""; /******* signification '' ***********/
+  border-bottom: 3px solid #99E2D0;
+  position: relative;
+  width: 38px;
+  display: block;
+  margin-top: 5px;
+}
+
+.menu-title-cards {
+  font-size: 18px;
   margin: 0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.menu-title-cards {
-  font-size: 17px;
-  font-weight: lighter;
-}
-.menu-title-cards::after {
-  content: ""; /******* signification '' ***********/
-  border-bottom: 3px solid #99E2D0;
-  position: relative;
-  width: 41px;
-  display: block;
-  margin-top: 5px;
 }
 
 .background-cards {
@@ -648,8 +650,8 @@ header img {
   transition: all 0.4s;
 }
 .background-cards:hover .checkmark {
-  padding-left: 22px;
-  padding-right: 40px;
+  padding-left: 19px;
+  padding-right: 43px;
 }
 .background-cards .articles-ellipsis {
   overflow: hidden;
@@ -713,7 +715,7 @@ header img {
     justify-content: center;
     margin-bottom: -40px;
   }
-  .menu-title-cards::after {
+  .menu-title-car::after { /**** à supprimer  02 07 2024****/
     content: "";
     border-bottom: 3px solid #99E2D0;
     width: 41px;
