--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -48,6 +48,7 @@
                 border-radius: 25px ;
                 padding: 15px 20px 15px 20px; 
                 box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+                transition: 2s;
         
             &:hover {
                     opacity: 0.8;
