_index.scss and menu-restaurants add at class: .fa-heart-masked:hover animation: infinite alternate

--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -65,7 +65,7 @@ header img {
     position: absolute;
     font-weight: bolder;
     color: $primary-color;
-    animation: heart 2s forwards;
+    animation: heart 2s infinite alternate;
 }
 
 @keyframes heart {
