--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -216,7 +216,7 @@
             position: absolute;
             font-weight: bolder;
             color: $primary-color;
-            animation: heart 2s forwards;
+            animation: heart 2s infinite alternate;
         }
 
         @keyframes heart {
