--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -195,6 +195,7 @@ header img {
     align-self: center;
     margin-top: 28px;
     margin-bottom: 40px;
+    transition: 2s;
 
     &:hover {
         opacity: 0.8;
