-_menu-restaurants.scss class: section-entrees, .section-plats, .section-desserts modified for global fadein animation

--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -83,7 +83,7 @@ header img {
 /****** Menu-section ***********/
 
 .section-entrees, .section-plats, .section-desserts {
-    animation: fadein 4ms;
+    animation: fadein 4s;
 }
   
 @keyframes fadein {
