--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -58,20 +58,20 @@ header img {
 .fa-heart-masked {
     position: absolute;
     font-size: x-large;
+    color: transparent;
     right: 0px;
 }
 
 .fa-heart-masked:hover {
-    position: absolute;
-    font-weight: bolder;
-    color: $primary-color;
+    background: linear-gradient(0deg,rgba(147,86,220,1) 0%, rgba(244,109,206,1) 100%);
+    background-clip: text;
     animation: heart 2s infinite alternate;
 }
 
 @keyframes heart {
     0% {
         transform: scale(0.4);
-        opacity: 0.3;
+        opacity: 0.4;
     }
     
     100% {
