--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ footer ul li a {
   border-radius: 25px;
   padding: 15px 20px 15px 20px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  transition: 2s;
 }
 .section-presentation nav .presentation-button:hover {
   opacity: 0.8;
@@ -360,20 +361,19 @@ footer ul li a {
 .article-cards .card-txt .fa-heart-masked {
   position: absolute;
   font-size: x-large;
-  color: black;
+  color: transparent;
   right: 18px;
   bottom: 30px;
 }
 .article-cards .card-txt .fa-heart-masked:hover {
-  position: absolute;
-  font-weight: bolder;
-  color: #9356DC;
-  animation: heart 2s forwards;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(244, 109, 206) 100%);
+  background-clip: text;
+  animation: heart 2s infinite alternate;
 }
 @keyframes heart {
   0% {
     transform: scale(0.4);
-    opacity: 0.3;
+    opacity: 0.4;
   }
   100% {
     transform: scale(1.3);
@@ -558,20 +558,20 @@ header img {
 .fa-heart-masked {
   position: absolute;
   font-size: x-large;
+  color: transparent;
   right: 0px;
 }
 
 .fa-heart-masked:hover {
-  position: absolute;
-  font-weight: bolder;
-  color: #9356DC;
-  animation: heart 2s forwards;
+  background: linear-gradient(0deg, rgb(147, 86, 220) 0%, rgb(244, 109, 206) 100%);
+  background-clip: text;
+  animation: heart 2s infinite alternate;
 }
 
 @keyframes heart {
   0% {
     transform: scale(0.4);
-    opacity: 0.3;
+    opacity: 0.4;
   }
   100% {
     transform: scale(1.3);
@@ -579,16 +579,8 @@ header img {
   }
 }
 /****** Menu-section ***********/
-.section-entrees {
-  animation: fadein 3.5s;
-}
-
-.section-plats {
-  animation: fadein 7s;
-}
-
-.section-desserts {
-  animation: fadein 10.5s;
+.section-entrees, .section-plats, .section-desserts {
+  animation: fadein 4s;
 }
 
 @keyframes fadein {
@@ -682,6 +674,7 @@ header img {
   align-self: center;
   margin-top: 28px;
   margin-bottom: 40px;
+  transition: 2s;
 }
 .order-button:hover {
   opacity: 0.8;
