--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -81,10 +81,20 @@ header img {
 }
 
 /****** Menu-section ***********/
-
-.section-entrees, .section-plats, .section-desserts {
-    animation: fadein 4s;
-}
+.section-entrees {
+    opacity: 0;
+    animation: fadein 3.5s 0s forwards;
+  }
+  
+  .section-plats {
+    opacity: 0;
+    animation: fadein 3.5s  0.6s forwards;
+  }
+  
+  .section-desserts {
+    opacity: 0;
+    animation: fadein 3.5s 1.2s forwards;
+  }
   
 @keyframes fadein {
     from {
