--- a/scss/_menu-restaurants.scss
+++ b/scss/_menu-restaurants.scss
@@ -117,7 +117,7 @@ header img {
         font-weight: lighter;
 
         &::after{
-            content: '';      /******* signification '' ***********/
+            content: '';
             border-bottom: 3px solid $tertiary-color;
             position: relative;
             width: 38px;
@@ -195,7 +195,6 @@ header img {
     padding: 15px 50px 15px 50px; 
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     align-self: center;
-    margin-top: 28px;
     margin-bottom: 40px;
     transition: 2s;
 
