--- a/css/style.css
+++ b/css/style.css
@@ -579,8 +579,19 @@ header img {
   }
 }
 /****** Menu-section ***********/
-.section-entrees, .section-plats, .section-desserts {
-  animation: fadein 4s;
+.section-entrees {
+  opacity: 0;
+  animation: fadein 3.5s 0s forwards;
+}
+
+.section-plats {
+  opacity: 0;
+  animation: fadein 3.5s 0.6s forwards;
+}
+
+.section-desserts {
+  opacity: 0;
+  animation: fadein 3.5s 1.2s forwards;
 }
 
 @keyframes fadein {
@@ -602,7 +613,7 @@ header img {
   font-weight: lighter;
 }
 .section-entrees > h3::after, .section-plats > h3::after, .section-desserts > h3::after {
-  content: ""; /******* signification '' ***********/
+  content: "";
   border-bottom: 3px solid #99E2D0;
   position: relative;
   width: 38px;
@@ -672,7 +683,6 @@ header img {
   padding: 15px 50px 15px 50px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   align-self: center;
-  margin-top: 28px;
   margin-bottom: 40px;
   transition: 2s;
 }
